# spending-tracker-api

./: Cargo.toml  README.md
public/: index.html
src/: category.rs  main.rs
