[package]
name = "spending-tracker-api"
version = "0.3.1"
authors = ["Bryant Deters <bryantdeters@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "3.0"
actix-cors = "0.3"
actix-web-prom = "0.5"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rust-embed = "5.6"
mime_guess = "2.0.3"
rusty-money = "0.3.5"


[profile.release]
lto = true
